# tui

./: .gitignore  Makefile  README.md  pyproject.toml
tests/: test_smoke.py
tui/: __init__.py  __main__.py  app.py  app.tcss
