[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tui"
version = "0.1.0"
description = "Terminal UI experiments with Textual — layouts, widgets, and visual demos."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.9.0",
    "textual>=1.0.0",
]

[project.scripts]
tui = "tui.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tui"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"
